--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -43,6 +43,17 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script type="text/partytown"  async src="https://www.googletagmanager.com/gtag/js?id=G-29K8V3B78N"></script>
+    <script type="text/partytown" >
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-29K8V3B78N');
+    </script>
+
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
